[project]
name = "nanopath"
version = "0.1.0"
description = "Lean NanoPath pretraining stack."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "torch==2.8.0+cu129",
  "torchvision==0.23.0+cu129",
  "timm>=1.0.24",
  "numpy>=2.2.0",
  "pandas>=2.3.0",
  "pyarrow>=22.0.0",
  "pyyaml>=6.0.3",
  "scikit-image>=0.25.0",
  "scikit-learn>=1.7.0",
  "scipy>=1.15.0",
  "lazyslide==0.9.2",
  "wandb>=0.20.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
